--- a/css/styles.css
+++ b/css/styles.css
@@ -12,20 +12,29 @@ h1{
       */
     margin-top: 50px;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
+    color: #66BFBF;
 }
 
 h3{
     
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 
 
+a{
+    color: #11999E;
+}
 
 
+.job-title{
+    font-weight: normal;
+}
 .my-prof-img{
     border-radius: 100%;
     height: 200px;
@@ -67,6 +76,25 @@ span{
 }
 
 
+.skill-row{
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+.skill-description{
+    line-height: 2;
+}
+
+.my-skills-img{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+.my-skills-img-biryani{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
 /*Relative Use position 
 .red{
     background-color: red;
