--- a/css/styles.css
+++ b/css/styles.css
@@ -1,99 +1,109 @@
-body{
-    margin: 0;
-    text-align: center;
-    font-family: 'Merriweather', serif;
+body {
+  color: #40514e;
+  margin: 0;
+  text-align: center;
+  font-family: "Merriweather", serif;
+
 }
 
-h1{
-    font-size: 5.625rem; 
-    /*1 .when using dynamic sizing we use % now 100% = 16px, if we want 90px then 90px/16px * 100 = 562.5%
+p{
+    line-height: 2;
+
+}
+h1 {
+  font-size: 5.625rem;
+  /*1 .when using dynamic sizing we use % now 100% = 16px, if we want 90px then 90px/16px * 100 = 562.5%
       2. 1em = 16px, if we want 90px then 90/16 = 5.625 em
       3. rem is the introduced in latest css3 where r is root.
       */
-    margin-top: 50px;
-    font-family: 'Sacramento', cursive;
-    color: #66BFBF;
+  margin-top: 50px;
+  font-family: "Sacramento", cursive;
+  color: #66bfbf;
 }
-h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
-    color: #66BFBF;
-}
-
-h3{
-    
-    font-family: 'Montserrat', sans-serif;
-    color: #11999E;
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  color: #66bfbf;
+  font-weight: normal;
+  padding-bottom: 10px;
 }
 
-
-a{
-    color: #11999E;
+h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
 
+a {
+  color: #11999e;
+}
 
-.job-title{
-    font-weight: normal;
-}
-.my-prof-img{
-    border-radius: 100%;
-    height: 200px;
-    width: 200px;
-}
-.my-skills-img{
-    border-radius: 100%;
-    
-}
-span{
-    text-decoration: underline;
-}
-.top-Container{
-    background-color: #e4f9f5;    
-    position: relative;
-    padding-top: 100px;
+hr{
+    width: 4%;
+    border: dotted #eaf6f6 6px;
+    border-bottom: none;
 }
 
 
-.middle-Container{
-  
+.intro{
+    width: 30%;
+    margin: auto;
+}
+.job-title {
+  font-weight: normal;
+}
+.my-prof-img {
+  border-radius: 100%;
+  height: 200px;
+  width: 200px;
+}
+.my-skills-img {
+  border-radius: 100%;
+}
+span {
+  text-decoration: underline;
+}
+.top-container {
+  background-color: #e4f9f5;
+  position: relative;
+  padding-top: 100px;
 }
 
-
-
-.bottom-Container{
-   
-} 
-
-.bottom-cloud{
-    position: absolute;
-    bottom: 300px;
-    left: 300px;
-}
-.top-cloud{
-    position: absolute;
-    right: 300px;
-    top: 50px;
+.middle-container {
+    margin: 100px 0;
 }
 
-
-.skill-row{
-    width: 50%;
-    margin: 100px auto;
-    text-align: left;
-}
-.skill-description{
-    line-height: 2;
+.bottom-container {
 }
 
-.my-skills-img{
-    width: 25%;
-    float: left;
-    margin-right: 30px;
+.bottom-cloud {
+  position: absolute;
+  bottom: 300px;
+  left: 250px;
 }
-.my-skills-img-biryani{
-    width: 25%;
-    float: right;
-    margin-left: 30px;
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 40px;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+}
+.skill-description {
+  line-height: 2;
+}
+
+.my-skills-img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+.my-skills-img-biryani {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
 /*Relative Use position 
 .red{
