--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,10 @@ body {
   margin: 0;
   text-align: center;
   font-family: "Merriweather", serif;
-
 }
 
-p{
-    line-height: 2;
-
+p {
+  line-height: 2;
 }
 h1 {
   font-size: 5.625rem;
@@ -35,18 +33,35 @@ h3 {
 
 a {
   color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
 }
 
-hr{
-    width: 4%;
-    border: dotted #eaf6f6 6px;
-    border-bottom: none;
+a:hover{
+    color: #eaf6f6;
 }
 
 
-.intro{
-    width: 30%;
-    margin: auto;
+.copyright{
+    color: #eaf6f6;
+    font-size: 0.75rem;
+    padding: 20px 0;
+}
+hr {
+  width: 4%;
+  border: dotted #eaf6f6 6px;
+  border-bottom: none;
+  margin: 100px auto;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto;
+}
+.intro {
+  width: 30%;
+  margin: auto;
 }
 .job-title {
   font-weight: normal;
@@ -69,10 +84,12 @@ span {
 }
 
 .middle-container {
-    margin: 100px 0;
+  margin: 100px 0;
 }
 
 .bottom-container {
+  background-color: #66bfbf;
+  padding: 50px 0 20px;
 }
 
 .bottom-cloud {
@@ -104,6 +121,33 @@ span {
   width: 25%;
   float: right;
   margin-left: 30px;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
 /*Relative Use position 
 .red{
